fix: final fixes + new jwt api
